# ArcSolve-MCP

./: .env.example  .gitignore  AGENTS.ko.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.ko.md  CONTRIBUTING.md  LICENSE  README.ko.md  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml  codex-review.yml  contract-drift.yml  nightly.yml  release.yml
arcsolve/: __init__.py  __main__.py  catalog.py  changelog.py  http.py  oauth.py  server.py  service.py  skill.py  xml.py
arcsolve/services/: __init__.py  _datagokr.py
arcsolve/services/airkorea/: README.md  __init__.py  contract.py  tools.py
arcsolve/services/airport/: README.md  __init__.py  contract.py  tools.py
arcsolve/services/arxiv/: README.md  __init__.py  contract.py  tools.py
arcsolve/services/crossref/: README.md  __init__.py  contract.py  tools.py
arcsolve/services/discord/: README.md  __init__.py  contract.py  tools.py
arcsolve/services/egen/: README.md  __init__.py  contract.py  tools.py
arcsolve/services/ev_charger/: README.md  __init__.py  contract.py  tools.py
arcsolve/services/feeds/: README.md  __init__.py  contract.py  tools.py
arcsolve/services/hackernews/: README.md  __init__.py  contract.py  tools.py
arcsolve/services/kakao/: README.md  __init__.py  contract.py  tools.py
arcsolve/services/line/: README.md  __init__.py  contract.py  tools.py
arcsolve/services/notion/: README.md  __init__.py  contract.py  tools.py
arcsolve/services/nws/: README.md  __init__.py  contract.py  tools.py
arcsolve/services/openalex/: README.md  __init__.py  contract.py  tools.py
arcsolve/services/openmeteo/: README.md  __init__.py  contract.py  tools.py
arcsolve/services/parking/: README.md  __init__.py  contract.py  tools.py
arcsolve/services/pubmed/: README.md  __init__.py  contract.py  tools.py
arcsolve/services/semanticscholar/: README.md  __init__.py  contract.py  tools.py
arcsolve/services/seoul_transit/: README.md  __init__.py  contract.py  tools.py
arcsolve/services/tago_transit/: README.md  __init__.py  contract.py  tools.py
arcsolve/services/telegram/: README.md  __init__.py  contract.py  tools.py
arcsolve/services/usgs_quake/: README.md  __init__.py  contract.py  tools.py
arcsolve/services/wikidata/: README.md  __init__.py  contract.py  tools.py
arcsolve/services/wikipedia/: README.md  __init__.py  contract.py  tools.py
arcsolve/services/zotero/: README.md  __init__.py  contract.py  tools.py
changelog.d/: README.md  airkorea.md  airport.md  arxiv.md  ci-codex-sockets.md  ci-contrib-pipeline.md  core-hardening.md  core-http-resilience.md  core.md  crossref.md  datagokr.md  deploy-enablement.md  discord.md  egen.md  ev_charger.md  feeds.md  hackernews.md  kakao.md  line.md  live-drift-nightly.md  notion.md  nws.md  openalex.md  openmeteo.md  parking.md  pubmed.md  repo.md  security-hardening.md  semanticscholar.md  seoul_transit.md  skill-academic-discovery.md  skill-info-gathering.md  skill-journey-planning.md  skill-messaging-routing.md  skill-situational-awareness.md  skill-wikipedia-lookup.md  tago_transit.md  telegram.md  usgs_quake.md  wikidata.md  (+2 more)
docs/: adding-a-service.ko.md  adding-a-service.md  adding-a-skill.ko.md  adding-a-skill.md  architecture.ko.md  architecture.md  i18n.ko.md  i18n.md  providers.md  services.md  skills.md
docs/local/: codex-for-oss-application.md
skills/academic-discovery/: README.md  SKILL.md
skills/academic-discovery/evals/: README.md
skills/academic-discovery/references/: sources.md
skills/info-gathering/: README.md  SKILL.md
skills/info-gathering/evals/: README.md
skills/journey-planning/: README.md  SKILL.md
skills/journey-planning/evals/: README.md
skills/messaging-routing/: README.md  SKILL.md
skills/messaging-routing/evals/: README.md
skills/situational-awareness/: README.md  SKILL.md
skills/situational-awareness/evals/: README.md
skills/wikipedia-lookup/: README.md  SKILL.md
skills/wikipedia-lookup/evals/: README.md
tests/: conftest.py  test_academic_discovery_skill.py  test_airkorea_contract.py  test_airkorea_tools.py  test_airport_contract.py  test_airport_tools.py  test_arxiv_contract.py  test_arxiv_tools.py  test_catalog.py  test_changelog.py  test_crossref_contract.py  test_crossref_tools.py  test_datagokr.py  test_discord_contract.py  test_discord_tools.py  test_egen_contract.py  test_egen_tools.py  test_ev_charger_contract.py  test_ev_charger_tools.py  test_feeds_contract.py  test_feeds_tools.py  test_hackernews_contract.py  test_hackernews_tools.py  test_http.py  test_info_gathering_skill.py  test_journey_planning_skill.py  test_kakao_contract.py  test_kakao_tools.py  test_line_contract.py  test_line_tools.py  test_live_drift.py  test_messaging_routing_skill.py  test_notion_contract.py  test_notion_tools.py  test_nws_contract.py  test_nws_tools.py  test_oauth.py  test_openalex_contract.py  test_openalex_tools.py  test_openmeteo_contract.py  (+30 more)
