[project]
name = "arcsolve"
dynamic = ["version"]
description = "Bundle the public APIs of popular services as MCP tools and Claude Skills, verified against official contracts (FastMCP)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "ArcSolver" }]
keywords = ["mcp", "model-context-protocol", "fastmcp", "llm", "agent", "tools", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "defusedxml>=0.7.1",
    # 상한 캡은 두지 않는다: fastmcp 3.x가 최신 httpx/pydantic를 요구해, 캡을 걸면 uv가
    # fastmcp를 깨진 2.x로 강등시킨다(검증됨). 호환성은 uv.lock 고정으로 관리한다.
    "fastmcp>=2.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5"]

[project.scripts]
arcsolve = "arcsolve.__main__:main"

[project.urls]
Homepage = "https://github.com/ArcSolver/ArcSolve-Kit"
Repository = "https://github.com/ArcSolver/ArcSolve-Kit"
Issues = "https://github.com/ArcSolver/ArcSolve-Kit/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
# 버전 단일 출처: arcsolve/__init__.py의 __version__ (pyproject와 이중 기록 제거).
path = "arcsolve/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["arcsolve"]

[tool.hatch.build.targets.sdist]
# 배포 sdist에서 로컬/민감 파일을 명시 제외(전역 git ignore에 의존하지 않음 — PyPI는 영구·미러링).
exclude = [
    ".claude",
    ".github",
    "/dist",
    "/docs/local",
    "*.bak",
    ".env",
    ".env.*",
    "credentials.json",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: 실제 외부 API를 호출하는 라이브 계약 드리프트 점검(ARCSOLVE_LIVE=1, nightly 전용)",
]
